src/test/deca/context/valid/objet/protected_cont_01.deca
// Description:
//    protected
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

class A {
    protected int x;
    protected A a = new A();
    int geta() {
        a.x;
    }

}